--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@
 html {
     background: url('../img/bg.svg') no-repeat center center fixed; 
     background-size: cover;
+    color: #ea3324;
 }
 
 .bar-container {
@@ -71,31 +72,39 @@ h1 {
     border-radius: 50px;
 }
 
-.home-container {
+.window-container {
     width: 80%;
     margin: auto;
     height: 100%;
 }
 
-.home-content {
+.window-content {
     display: flex;
     height: 90%;
     flex-direction: column;
     justify-content: space-around;
+    font-family: 'Lora';
 }
 
-.home-content h1 {
-    font-family: 'Lora';
+.window-content h1 {
+    
     font-weight: 200;
 }
 
-.home-content img {
+.window-content img {
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 80%;
     border-radius: 50px;
     border: 5px dotted grey;
+}
+
+.window-lower table {
+    width: 80%;
+    margin: auto;
+    margin-top: 3em;
+    text-align: left;
 }
 
 .footer {
